BE:PatientService - patient AuditLog & patient Medical Audit Log
-patient AuditLog & patient Medical Audit Log :
+getAll
+view detail
+delete
